--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
 	<dependency>
 	    <groupId>com.femtioprocent</groupId>
 	    <artifactId>fpd</artifactId>
-	    <version>0.1.0.0-SNAPSHOT</version>
+	    <version>0.1.0.0</version>
 	</dependency>
 	<dependency>
 	    <groupId>commons-codec</groupId>
