--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.femtioprocent</groupId>
     <artifactId>propaganda</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.6.0</version>
+    <version>0.1.7.0-SNAPSHOT</version>
     <name>Propaganda</name>
 
     <licenses>
