--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,25 @@
     
     <build>
 
+    <!-- To define the plugin version in your parent POM -->
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
+
 	<plugins>
+    <!-- To use the plugin goals in your POM or parent POM -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.1.0</version>
+      </plugin>
 	    <plugin>
 		<groupId>org.codehaus.mojo</groupId>
 		<artifactId>build-helper-maven-plugin</artifactId>
@@ -43,7 +61,9 @@
 
 
 	    <plugin>
+
 		<artifactId>maven-assembly-plugin</artifactId>
+     <version>3.3.0</version>
 		<configuration>
 		    <archive>
 			<manifest>
@@ -53,6 +73,9 @@
 			    <SplashScreen-Image>splash.png</SplashScreen-Image>
 			</manifestEntries>
 		    </archive>
+	    <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
 		    <descriptors>
 			<descriptor>src/assemble/jexec.xml</descriptor>
 		    </descriptors>
@@ -62,16 +85,17 @@
 			<id>attach-jexec</id>
 			<phase>package</phase>
 			<goals>
-			    <goal>assembly</goal>
+			    <goal>single</goal>
 			</goals> 
 		    </execution> 
 		</executions> 
 	    </plugin>
 
+<!--
 	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
+<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-antrun-plugin</artifactId>
-		<version>1.4</version>
+		<version>3.0.0</version>
 		<executions>
 		    <execution>
 			<phase>generate-sources</phase>
@@ -81,7 +105,7 @@
 		    </execution>
 		</executions>
 		<configuration>
-		    <tasks>
+		    <target>
 			<echo file="src/main/java/com/femtioprocent/propaganda/Version.java" append="false"><![CDATA[
 	    package com.femtioprocent.propaganda;
 	    public class Version {
@@ -91,9 +115,10 @@
 	    public static final String mavenBuildTimestamp = "${maven.build.timestamp}";
 	    }
 	    ]]></echo>
-		    </tasks>
+		    </target>
 		</configuration>
 	    </plugin>
+-->
 	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-compiler-plugin</artifactId>
@@ -104,18 +129,26 @@
 		    <encoding>${project.build.sourceEncoding}</encoding>
 		</configuration>
 	    </plugin>
+<!--
 	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-resources-plugin</artifactId>
-		<version>2.2</version>
+		<version>3.2.0</version>
 		<configuration>
 		    <encoding>${project.build.sourceEncoding}</encoding>
 		</configuration>
 	    </plugin>
+-->
 
 	</plugins>
     </build>
     <dependencies>
+<dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-clean-plugin</artifactId>
+  <version>3.1.0</version>
+  <type>maven-plugin</type>
+</dependency>
 	<dependency>
 	    <groupId>com.femtioprocent</groupId>
 	    <artifactId>fpd</artifactId>
@@ -137,11 +170,13 @@
 	    <artifactId>mqtt-client</artifactId>
 	    <version>1.5</version>
 	</dependency>
+<!--
 	<dependency>
 	    <groupId>io.moquette</groupId>
 	    <artifactId>moquette-broker</artifactId>
-	    <version>0.8</version>
+	    <version>0.8.1</version>
 	</dependency>
+-->
 	<dependency>
 	    <groupId>org.json</groupId>
 	    <artifactId>json</artifactId>
@@ -193,5 +228,6 @@
 	    </snapshots>
 	</repository>
     </repositories>
+
 
 </project>
