--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.femtioprocent</groupId>
     <artifactId>propaganda</artifactId>
@@ -8,225 +8,242 @@
     <name>Propaganda</name>
 
     <licenses>
-	<license>
-	    <name>GNU AFFERO GENERAL PUBLIC LICENSE Version 3</name>
-	    <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
-	</license>
+        <license>
+            <name>GNU AFFERO GENERAL PUBLIC LICENSE Version 3</name>
+            <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
+        </license>
     </licenses>
-    
+
     <build>
 
-    <!-- To define the plugin version in your parent POM -->
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+        <!-- To define the plugin version in your parent POM -->
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
 
-	<plugins>
-    <!-- To use the plugin goals in your POM or parent POM -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>3.1.0</version>
-      </plugin>
-	    <plugin>
-		<groupId>org.codehaus.mojo</groupId>
-		<artifactId>build-helper-maven-plugin</artifactId>
-		<version>1.9.1</version>
-		<executions>           
-		    <execution>             
-			<id>attach-distribution-artifact</id>             
-			<phase>package</phase>             
-			<goals>               
-			    <goal>attach-artifact</goal>             
-			</goals>            
-			<configuration>
-			    <artifacts>
-				<artifact>
-				    <file>${project.build.directory}/${project.artifactId}-${project.version}-jexec.jar</file>
-				    <type>jar</type>
-				    <classifier>jexec</classifier>
-				</artifact>
-			    </artifacts>
-			</configuration>          
-		    </execution>         
-		</executions>             
-	    </plugin>
+        <plugins>
+            <!-- To use the plugin goals in your POM or parent POM -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-distribution-artifact</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>
+                                        ${project.build.directory}/${project.artifactId}-${project.version}-jexec.jar
+                                    </file>
+                                    <type>jar</type>
+                                    <classifier>jexec</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
 
-	    <plugin>
+            <plugin>
 
-		<artifactId>maven-assembly-plugin</artifactId>
-     <version>3.3.0</version>
-		<configuration>
-		    <archive>
-			<manifest>
-			    <mainClass>com.femtioprocent.demo.DemoClient</mainClass>
-			</manifest>
-			<manifestEntries>
-			    <SplashScreen-Image>splash.png</SplashScreen-Image>
-			</manifestEntries>
-		    </archive>
-	    <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-		    <descriptors>
-			<descriptor>src/assemble/jexec.xml</descriptor>
-		    </descriptors>
-		</configuration>
-		<executions> 
-		    <execution> 
-			<id>attach-jexec</id>
-			<phase>package</phase>
-			<goals>
-			    <goal>single</goal>
-			</goals> 
-		    </execution> 
-		</executions> 
-	    </plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.femtioprocent.demo.DemoClient</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <SplashScreen-Image>splash.png</SplashScreen-Image>
+                        </manifestEntries>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <descriptors>
+                        <descriptor>src/assemble/jexec.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-jexec</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
-<!--
-	    <plugin>
-<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-antrun-plugin</artifactId>
-		<version>3.0.0</version>
-		<executions>
-		    <execution>
-			<phase>generate-sources</phase>
-			<goals>
-			    <goal>run</goal>
-			</goals>
-		    </execution>
-		</executions>
-		<configuration>
-		    <target>
-			<echo file="src/main/java/com/femtioprocent/propaganda/Version.java" append="false"><![CDATA[
-	    package com.femtioprocent.propaganda;
-	    public class Version {
-	    public static final String projectGroup = "${project.groupId}";
-	    public static final String projectName = "${project.artifactId}";
-	    public static final String projectVersion = "${project.version}";
-	    public static final String mavenBuildTimestamp = "${maven.build.timestamp}";
-	    }
-	    ]]></echo>
-		    </target>
-		</configuration>
-	    </plugin>
--->
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-compiler-plugin</artifactId>
-		<version>2.0.2</version>
-		<configuration>
-		    <source>1.8</source>
-		    <target>1.8</target>
-		    <encoding>${project.build.sourceEncoding}</encoding>
-		</configuration>
-	    </plugin>
-<!--
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-resources-plugin</artifactId>
-		<version>3.2.0</version>
-		<configuration>
-		    <encoding>${project.build.sourceEncoding}</encoding>
-		</configuration>
-	    </plugin>
--->
+            <!--
+                    <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>3.0.0</version>
+                    <executions>
+                        <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <target>
+                        <echo file="src/main/java/com/femtioprocent/propaganda/Version.java" append="false"><![CDATA[
+                    package com.femtioprocent.propaganda;
+                    public class Version {
+                    public static final String projectGroup = "${project.groupId}";
+                    public static final String projectName = "${project.artifactId}";
+                    public static final String projectVersion = "${project.version}";
+                    public static final String mavenBuildTimestamp = "${maven.build.timestamp}";
+                    }
+                    ]]></echo>
+                        </target>
+                    </configuration>
+                    </plugin>
+            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <!--
+                    <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.2.0</version>
+                    <configuration>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                    </configuration>
+                    </plugin>
+            -->
 
-	</plugins>
+        </plugins>
     </build>
     <dependencies>
-<dependency>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-clean-plugin</artifactId>
-  <version>3.1.0</version>
-  <type>maven-plugin</type>
-</dependency>
-	<dependency>
-	    <groupId>com.femtioprocent</groupId>
-	    <artifactId>fpd</artifactId>
-	    <version>0.1.0.0</version>
-	</dependency>
-	<dependency>
-	    <groupId>commons-codec</groupId>
-	    <artifactId>commons-codec</artifactId>
-	    <version>1.6</version>
-	    <type>jar</type>
-	</dependency>
-	<dependency>
-	    <groupId>org.swinglabs</groupId>
-	    <artifactId>swing-layout</artifactId>
-	    <version>1.0.3</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.fusesource.mqtt-client</groupId>
-	    <artifactId>mqtt-client</artifactId>
-	    <version>1.5</version>
-	</dependency>
-<!--
-	<dependency>
-	    <groupId>io.moquette</groupId>
-	    <artifactId>moquette-broker</artifactId>
-	    <version>0.8.1</version>
-	</dependency>
--->
-	<dependency>
-	    <groupId>org.json</groupId>
-	    <artifactId>json</artifactId>
-	    <version>20140107</version>
-	    <type>jar</type>
-	</dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>3.1.0</version>
+            <type>maven-plugin</type>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.femtioprocent</groupId>
+            <artifactId>fpd</artifactId>
+            <version>0.1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swing-layout</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fusesource.mqtt-client</groupId>
+            <artifactId>mqtt-client</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <!-- -->
+            <dependency>
+                <groupId>io.moquette</groupId>
+                <artifactId>moquette-broker</artifactId>
+                <version>0.15-SNAPSHOT</version>
+            </dependency>
+        <!-- -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <reporting>
-	<plugins>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-checkstyle-plugin</artifactId>
-		<version>2.12.1</version>
-		<configuration>
-		    <configLocation>config/sun_checks.xml</configLocation>
-		</configuration>
-	    </plugin>
-	</plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.12.1</version>
+                <configuration>
+                    <configLocation>config/sun_checks.xml</configLocation>
+                </configuration>
+            </plugin>
+        </plugins>
     </reporting>
 
 
     <distributionManagement>
-	<snapshotRepository>
-	    <id>femtioprocent.se</id>
-	    <name>femtioprocent-snapshots</name>
-	    <url>http://femtioprocent.se:8081/artifactory/libs-snapshot-local</url>
-	</snapshotRepository>
-	<repository>
-	    <id>femtioprocent.se</id>
-	    <name>femtioprocent.se-releases</name>
-	    <url>http://femtioprocent.se:8081/artifactory/libs-release-local</url>
-	</repository>
+        <snapshotRepository>
+            <id>femtioprocent.se</id>
+            <name>femtioprocent-snapshots</name>
+            <url>http://femtioprocent.se:8081/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
+        <repository>
+            <id>femtioprocent.se</id>
+            <name>femtioprocent.se-releases</name>
+            <url>http://femtioprocent.se:8081/artifactory/libs-release-local</url>
+        </repository>
 
     </distributionManagement>
 
     <repositories>
-	<repository>
-	    <id>bintray</id>
-	    <url>http://dl.bintray.com/andsel/maven/</url>
-	    <releases>
-		<enabled>true</enabled>
-	    </releases>
-	    <snapshots>
-		<enabled>false</enabled>
-	    </snapshots>
-	</repository>
+        <repository>
+            <id>bintrayjc</id>
+            <url>https://jcenter.bintray.com</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>bintray</id>
+            <url>http://dl.bintray.com/andsel/maven/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
 
