--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,8 @@ services:
     build: .
     ports:
       - "8899:8899"
+      - "8889:8889"
+      - "8839:8839/udp"
+      - "8859:8859"
     volumes:
       - ./logs:/app/logs
