--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
         </plugins>
     </build>
     <dependencies>
+	<dependency>
+	    <groupId>com.sun.xml.ws</groupId>
+	    <artifactId>jaxws-ri</artifactId>
+	    <version>2.3.3</version>
+	    <type>pom</type>
+	</dependency>
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clean-plugin</artifactId>
