--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,22 @@
 	    <version>2.3.3</version>
 	    <type>pom</type>
 	</dependency>
+   <dependency>
+            <groupId>jakarta.xml.ws</groupId>
+            <artifactId>jakarta.xml.ws-api</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-rt</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+<dependency>
+  <groupId>javax.xml.ws</groupId>
+  <artifactId>jaxws-api</artifactId>
+  <version>2.3.1</version>
+</dependency>
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clean-plugin</artifactId>
