--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ version: "3.9"
 services:
   server_hub:
     build: .
+    environment:
+      - PROPAGANDA_ARGS=-MB
     ports:
       - "8899:8899"
       - "8889:8889"
