legazy matters fixed

--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
             <dependency>
                 <groupId>io.moquette</groupId>
                 <artifactId>moquette-broker</artifactId>
-                <version>0.15-SNAPSHOT</version>
+                <version>0.17</version>
             </dependency>
         <!-- -->
         <dependency>
