--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   server_hub:
     build: .
     environment:
-      - PROPAGANDA_ARGS=-MB
+      - PROPAGANDA_ARGS
     ports:
       - "8899:8899"
       - "8889:8889"
